--- a/acc2.html
+++ b/acc2.html
@@ -8,40 +8,41 @@
     <title>Accueil</title>
 </head>
 <body>
-   <nav>
+  <nav>
     <ul>
       <li>
         <a class="logo" href="#">
-        <img src="img/logo.png" class="img">
+        <img src="img\logo.png" class="img">
         <span>Vision</span>
         </a>
       </li>
       <li>
-        <a href="#">
-        <img  src="img/home.png" class="img">
+        <a href="acc2.html.html">
+        <img  src="img\home.png" class="img">
         <span class="nav-item">Home</span>
         </a>
       </li>
       <li>
         <a href="#">
-        <img src="img/ser.png" class="img">
+        <img src="img\\ser.png" class="img">
         <span class="nav-item">Service</span>
         </a>
       </li>
       <li>
-        <a href="#">
-        <img src="img/abt.png" class="img">
+        <a href="about.html">
+        <img src="img\abt.png" class="img">
         <span class="nav-item">About us</span>
         </a>
       </li>
       <li>
         <a class="lg" href="#">
-        <img src="img/lg.png" class="img">
+        <img src='img\lg.png' class="img">
         <span class="nav-item">Log out</span>
         </a>
       </li>
     </ul>
   </nav>
+
  
   <div class="buttons-container">
     <a href="login.html" class="button login-button" target="_blank"><h1>Login</h1></a>
