--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="acc2.html">
             <img  src="img/home.png" class="img">
             <span class="nav-item">Home</span>
             </a>
@@ -32,7 +32,7 @@
             </a>
           </li>
           <li>
-            <a href="#">
+            <a href="about.html">
             <img src="img/abt.png" class="img">
             <span class="nav-item">About us</span>
             </a>
@@ -54,11 +54,11 @@
                 <ul class="info-details">
                     <li>
                         <i class="fas fa-phone-alt"></i>
-                        <span>Phone:</span> <a href="tel:+ 212 697338594">+ 1235 2355 98</a>
+                        <span>Phone:</span> <a href="tel:+ 212 697338594">+212 697338594</a>
                     </li>
                     <li>
                         <i class="fas fa-paper-plane"></i>
-                        <span>Email:</span> <a href="contact@vision.com">info@yoursite.com</a>
+                        <span>Email:</span> <a href="contact@vision.com">contact@vision.com</a>
                     </li>
                     <li>
                         <i class="fas fa-globe"></i>
